starting the html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <title>Weather Forecaster</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Weather Dasboard</h1>
+    </header>
+<div class="container">
+    <div class="search">
+        <div class="row">
+            <h1>Search for a city</h1>
+        </div>
+        <div class="row">
+            <input type="text" class="searchInput" placeholder="Enter a city!">
+            <button type="submit" class="searchBtn"></button>
+        </div>
+        <div class="historyItems"></div>
+    </div>
+    <div class="col-two-container">
+        <div class="forecast">
+            <div class="row"></div>
+        </div>
+    </div>
+</div>
+
+
+
 </body>
 </html>
