--- a/index.html
+++ b/index.html
@@ -25,12 +25,32 @@
     </div>
     <div class="col-two-container">
         <div class="forecast">
-            <div class="row"></div>
+            <div class="row">
+                <h1 class="cityName">City name</h1>
+                <h1 class="currentDate"></h1>
+                <img class="weatherIcon"></img>
+            </div>
+            <div class="row">
+                <p class="temp">Temperature</p>
+            </div>
+            <div class="row">
+                <p class="windSpeed">Wind windSpeed</p>
+            </div>
+            <div class="row">
+                <p class="humidity">Humidity</p>
+            </div>
+            <div class="row">
+                <p class="uvIndex">UV Index</p>
+            </div>
+        </div>
+        <div class="five-day-container">
+            <h1>5-day Forecast</h1>
+            <div class="card-row"></div>
         </div>
     </div>
 </div>
 
-
+<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
