--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Weather Dasboard</h1>
+        <h1>Weather Dashboard</h1>
     </header>
 <div class="container">
     <div class="search">
